<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:background="@drawable/background_resposta"
    android:gravity="center"
    android:theme="@style/Theme.Penseresponda">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:srcCompat="@drawable/personagem" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:boxBackgroundColor="@null">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/escreva"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:backgroundTint="@color/cinza5"
            android:id="@+id/edtResposta" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/cinza1"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:background="@color/verde_limao1"
        android:id="@+id/btnCadastrar"
        android:hint="@string/btnEnviar"
        style="?android:attr/borderlessButtonStyle"
        />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/btnCancel"
        android:background="@color/cinza5"
        android:textColor="@color/cinza1"
        android:layout_margin="5dp"
        android:padding="10dp"
        style="?android:attr/borderlessButtonStyle"
        android:layout_marginTop="10dp"
        />

</androidx.appcompat.widget.LinearLayoutCompat>