<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:background="@color/cinza2"
    android:gravity="center"
    android:theme="@style/Theme.Penseresponda">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        android:layout_marginBottom="20dp"
        app:boxBackgroundColor="@null">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cinza1"
            android:layout_margin="5dp"
            android:hint="@string/email"
            android:textColorHint="@color/cinza7"
            android:textColor="@color/cinza7"
            android:id="@+id/edtEmail"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:passwordToggleEnabled="true"
        android:layout_marginBottom="20dp"
        app:boxBackgroundColor="@null">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtSenha"
            android:layout_margin="5dp"
            android:backgroundTint="@color/cinza1"
            android:hint="@string/senha"
            android:textColorHint="@color/cinza7"
            android:textColor="@color/cinza7"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:passwordToggleEnabled="true"
        android:layout_marginBottom="20dp"
        app:boxBackgroundColor="@null">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cinza1"
            android:id="@+id/edtConfSenha"
            android:hint="@string/senha"
            android:textColorHint="@color/cinza7"
            android:textColor="@color/cinza7"
            android:layout_margin="5dp"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnCadastrar"
        android:textColor="@color/cinza1"
        android:layout_margin="5dp"
        android:padding="10dp"
        app:cornerRadius="8dp"
        android:background="@color/verde_limao1"
        style="?android:attr/borderlessButtonStyle"
        android:hint="@string/btnCad"
        />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/btnCancel"
        android:background="@color/cinza5"
        android:textColor="@color/cinza1"
        android:layout_margin="5dp"
        android:padding="10dp"
        style="?android:attr/borderlessButtonStyle"
        android:layout_marginTop="10dp"
        />

</LinearLayout>